frontend/ports: Fix history chart navig buttons on small screens

--- a/qtoggleserver/frontend/less/ports/ports.less
+++ b/qtoggleserver/frontend/less/ports/ports.less
@@ -25,6 +25,8 @@ div.ports-history-chart-page-navigation {
     div.ports-history-chart-prev-button,
     div.ports-history-chart-next-button {
         min-width: 2.5em;
+        display: inline-grid;
+        align-content: center;
     }
 
 }
